# aionowplaying

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: ci.yml
.github/workflows/: ci.yml
aionowplaying/: __init__.py  enum.py  interface.py  model.py  service.py
aionowplaying/backend/: __init__.py  base.py  linux.py  macos.py  windows.py
aionowplaying/interface/: __init__.py  _windows.py  base.py  macos.py  mpris2.py  windows.py
aionowplaying/interface_old/: mpris2.py
src/aionowplaying/: __init__.py
src/aionowplaying/interface/: __init__.py  macos.py  mpris2.py  windows.py
tests/: example_interface.py  test_aionowplaying.py  test_linux.py  test_nowplaying.py  test_np_service.py  test_windows.py
