[tool.poetry]
name = "aionowplaying"
version = "0.9.0"
license = "GPL-3.0-only"
description = "A cross-platform Now Playing client"
authors = ["Bruce Zhang <zttt183525594@gmail.com>"]
keywords = ["nowplaying", "mpris"]
readme = "README.md"
repository = "https://github.com/BruceZhang1993/aionowplaying"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
dbus-next = "*"
pydantic = "*"
winrt = { version = "*", platform = "win32" }

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/BruceZhang1993/aionowplaying/issues"
