[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[project]
name = "aionowplaying"
version = "0.10.1"
description = "A cross-platform Now Playing client"
authors = [{ name = "Bruce Zhang", email = "zttt183525594@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "GPL-3.0-only"
maintainers = [{ name = "Bruce Zhang", email = "zttt183525594@gmail.com" }]
keywords = [
    "nowplaying",
    "mpris",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic",
    "dbus-next ; sys_platform == 'linux'",
    "winrt-runtime ; sys_platform == 'win32'",
    "pyobjc-framework-MediaPlayer ; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa ; sys_platform == 'darwin'",
]

[project.urls]
Repository = "https://github.com/BruceZhang1993/aionowplaying"
"Bug Tracker" = "https://github.com/BruceZhang1993/aionowplaying/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "poetry2setup>=1.0.0,<2",
]
